--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,9 @@ cloudpickle==3.1.1
 contourpy==1.3.2
 cycler==0.12.1
 databricks-sdk==0.58.0
+distro==1.9.0
 docker==7.1.0
+dotenv==0.9.9
 fastapi==0.116.1
 filelock==3.18.0
 flask==3.1.1
@@ -29,10 +31,13 @@ graphql-core==3.2.6
 graphql-relay==3.2.0
 gunicorn==23.0.0
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
 importlib-metadata==8.7.0
 itsdangerous==2.2.0
 jinja2==3.1.6
+jiter==0.10.0
 joblib==1.5.1
 kiwisolver==1.4.8
 mako==1.3.10
@@ -44,6 +49,7 @@ mpmath==1.3.0
 multidict==6.6.3
 networkx==3.5
 numpy==2.3.1
+openai==1.98.0
 opentelemetry-api==1.35.0
 opentelemetry-sdk==1.35.0
 opentelemetry-semantic-conventions==0.56b0
@@ -60,6 +66,7 @@ pydantic==2.11.7
 pydantic-core==2.33.2
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
 pytz==2025.2
 pyyaml==6.0.2
 requests==2.32.4
@@ -73,6 +80,7 @@ sqlalchemy==2.0.41
 sqlparse==0.5.3
 starlette==0.47.1
 sympy==1.13.1
+tabulate==0.9.0
 threadpoolctl==3.6.0
 torch==2.6.0
 torch-geometric==2.6.1
